<resources>
    <string name="app_name">"Financial manager "</string>
    <string name="login_background_picture">login background picture</string>
    <string name="enter_your_credentials">Enter your credentials</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="remember_me">Remember me</string>
    <string name="login_in_progress">Login in progress..</string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="notification_title">Database is successfully updated.</string>
    <string name="image_description" translatable="false">image description</string>
    <string name="employees_value">Employees</string>
    <string name="products_value">Products</string>
    <string name="stores_value">Stores</string>
    <string name="customers_value">Customers</string>
    <string name="insert_bill_value">Invoices</string>
    <string name="statistic_value">Statistic</string>
    <string name="navigation_problem">There is a problem with navigation</string>
    <string name="home_title">Home</string>
    <string name="products_title">Products</string>
    <string name="customers_title">Customers</string>
    <string name="statistics_title">Statistics</string>
    <string name="stores_title">Stores</string>
    <string name="employees_title">Employees</string>
    <string name="insert_bill_title">Invoices</string>
    <string name="stores_locations">Lokacije poslovnica</string>
    <string name="no_internet">There is no internet connection</string>
    <string name="general_error">An error occurred. Please try again later.</string>
    <string name="mail_title">Title</string>
    <string name="describe_problem">Molimo Vas opišite problem na koji ste naišli..</string>
    <string name="send_email">Pošalji e-mail</string>
    <string name="problem_with_email">Pojavio se problem sa otvaranjem e-maila</string>
    <string name="choose_to_share">Izaberite gdje želite podijeliti:</string>
    <string name="retry_resource">Retry</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>

    <string name="settings">Settings</string>
    <string name="more">more</string>
    <string name="share">Share</string>
    <string name="report_a_bug">Report a bug</string>
    <string name="enable_all_options">Enable all options</string>
    <string name="change_label">change</string>
    <string name="number_label">Number</string>
    <string name="date_label">Date</string>
    <string name="total_label">Total</string>
    <string name="time_period">Time period: %1$s</string>
    <string name="log_out">Log out</string>
    <string name="log_out_message">Are you sure that you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">Cancel</string>
    <string name="choose_month_year">Choose month and year </string>
    <string name="no_data_for_month_and_year">There is no data for the selected year and month.</string>
    <string name="no_data_for_year">There is no data for the selected year.</string>

    <!--quarter-->
    <string name="quarter_first" translatable="false">1/4</string>
    <string name="quarter_second" translatable="false">2/4</string>
    <string name="quarter_third" translatable="false">3/4</string>
    <string name="quarter_fourth" translatable="false">4/4</string>
    <string name="add">add</string>
    <string name="field_empty">This field can\'t be empty.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="product_name">Product name</string>
    <string name="quantity">Quantity</string>
    <string name="top_products">Top 10 products</string>
    <string name="click_on_the_product_and_take_a_picture"><u>Click on the product and take a picture.</u></string>
    <string name="unable_to_open_camera_resource">Unable to open camera.</string>
    <string name="show_filters">Show filters</string>
    <string name="hide_filters">Hide filters</string>
    <string name="insert_date">Insert Date</string>
    <string name="first_selection">First selection</string>
    <string name="second_selection">Second selection</string>
    <string name="insert_product">Insert product</string>
    <string name="select_product">Select product</string>
    <string name="wrong_username_or_password">Wrong username or password!</string>
    <string name="quantity_x_label">quantity</string>
    <string name="day_of_the_month">Day of the month</string>
    <string name="product_smallest_share" translatable="false">Proizvod %1$s je doprinio ukupnoj prodaji sa %2$s%% unutar izabranog vremenskog razdoblja.</string>
    <string name="months_label" translatable="false">mjeseci</string>
    <string name="total_y_label">Total</string>
    <string name="months_x_label">Quarters</string>
    <string name="stores_label">stores</string>
    <string name="other_stores_label">Other</string>
    <string name="pick_product">Pick product</string>
    <string name="inventory">Inventory</string>
    <string name="confirm">Confirm</string>
    <string name="enter_info">You need to enter required info!</string>
    <string name="select_store">Select store</string>
    <string name="select_location_resource">Select location</string>
    <string name="category">Category</string>
    <string name="use_month_and_year_selection">Use month and year selection</string>
    <string name="select_discount_period">Select discount period</string>
    <string name="select_two_stores">Select two stores</string>
    <string name="ok">Ok</string>
    <string name="or_resource">OR</string>
    <string name="place_your_finger_on_the_sensor_to_authenticate">Place your finger on the sensor to authenticate</string>

    <!--speech feature-->
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="product_not_available_resource">The product you are looking for is currently not available.</string>
    <string name="google_search_alert_dialog_message">This App requires the Google Search App to work properly.</string>
    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="database_decryption_error" translatable="false">Neuspješno dekriptiranje baze</string>
    <string name="full_name">Full name</string>
    <string name="select_category">Select category</string>
    <string name="ra_un_br">Inovice nr.</string>
    <string name="zaposlenik">Employee</string>
    <string name="no_data">No data</string>
    <string name="scan_or_enter_invoice_number">Scan or enter invoice number</string>
    <string name="enter_invoice_num">You need to enter invoice number</string>
    <string name="returned_item_success">You successfully returned item</string>
    <string name="problem_returning">There is a problem with returning, please try later</string>
    <string name="seven_days_purchase">7 days have passed since the purchase</string>
    <string name="error_pdf_create">Error with creating PDF inventory document.</string>
    <string name="download_data_problem">There is problem with downloading data.</string>
    <string name="error_send_image">Error happened with sending image.</string>
    <string name="na_in_pla_anja">Payment method:</string>
    <string name="iznos">Total:</string>
    <string name="no_data_for_month_and_year_for_product">There is no product data for the selected year and month.</string>
    <string name="attendance">Attendance</string>
    <string name="general_options">General options</string>
    <string name="toast_msg_design">Choose toast message design</string>
    <string name="vibrations">Vibrations</string>
    <string name="notifications">Enable or disable notifications</string>
    <string name="brightness">Change brightness</string>
    <string name="fingerprint_authentication">Use fingerprint authentication</string>
    <string name="problem_with_fingerprint">There is a problem with fingerprint.</string>
    <string name="no_data_for_quarter">There is no data for this quarter</string>
    <string name="quarter_product">Product %1$s is best seller for the selected quarter.</string>
    <string name="toast_design">You successfully changed toast design.</string>
    <string name="siganture">You need to sign yourself.</string>
    <string name="select_return">Select items to return</string>
    <string name="notification_channel">storage - notifications</string>
    <string name="warehouse_status">Check warehouse status</string>
    <string name="notification_priority">High priority</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="address">Address</string>
    <string name="store">Store</string>
    <string name="location">Location</string>
    <string name="confirm_button">Confirm</string>
    <string name="cancel_button">Cancel</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="change_product_info">Change product info</string>
    <string name="change_employee_info">Change employee info</string>
    <string name="insert_product_info">Insert product</string>
    <string name="insert_employee_info">Insert employee</string>

</resources>