<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/number_label"
        android:textSize="18sp"
        android:padding="5dp"
        android:textColor="@color/homeTextColor"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/date_label"
        android:textSize="18sp"
        android:padding="5dp"
        android:textColor="@color/homeTextColor"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/total_label"
        android:textSize="18sp"
        android:padding="5dp"
        android:textColor="@color/homeTextColor"/>

</LinearLayout>