<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bar_chart.BarChartFragment">

    <LinearLayout
        android:id="@+id/linearContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/timePeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_period"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/changePeriod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_label"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:gravity="end"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>

    <EditText
        android:id="@+id/selectStore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearContainer"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:focusableInTouchMode="false"
        android:gravity="center_vertical"
        android:hint="@string/select_two_stores"
        android:maxLines="1"
        android:paddingEnd="30dp"
        android:singleLine="true"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/xLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/months_x_label"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:layout_below="@id/selectStore"
        android:textColor="@android:color/darker_gray"
        android:textStyle="italic"
        android:textSize="17sp"/>

    <com.varivoda.igor.tvz.financijskimanager.util.VerticalTextView
        android:id="@+id/totalLabel"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/linearContainer"
        android:layout_alignParentStart="true"
        android:paddingStart="70dp"
        android:gravity="bottom"
        android:text="@string/total_y_label"
        android:textColor="@android:color/darker_gray"
        android:textSize="17sp"
        android:textStyle="italic"
        tools:ignore="RtlSymmetry" />

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/barChart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/xLabel"
        android:layout_toEndOf="@id/totalLabel"
        android:layout_margin="5dp"/>

</RelativeLayout>