<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pie_chart.PieChartFragment">

    <LinearLayout
        android:id="@+id/linearContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/timePeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_period"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/changePeriod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_label"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:gravity="end"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/useMonthAndYearSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/use_month_and_year_selection"
        android:layout_below="@id/linearContainer"
        />

    <EditText
        android:id="@+id/pickStore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/useMonthAndYearSwitch"
        android:visibility="invisible"
        android:focusableInTouchMode="false"
        android:hint="@string/select_store" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/pickStore"
        android:layout_margin="5dp"/>

</RelativeLayout>