<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.top10.Top10Fragment">

    <LinearLayout
        android:id="@+id/linearContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/timePeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_period"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/changePeriod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/change_label"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/useMonthAndYearSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/use_month_and_year_selection"
        android:layout_below="@id/linearContainer"
        />

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/useMonthAndYearSwitch"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/background_line"
        android:orientation="horizontal"
        android:padding="4dp">

        <TextView
            android:id="@+id/product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:padding="10dp"
            android:text="@string/product_name"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/product"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:padding="10dp"
            android:text="@string/quantity"
            android:textSize="12sp" />

    </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/topRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_below="@id/header"
        tools:listitem="@layout/top_sellers_item" />

</RelativeLayout>