<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.top3.Top3Fragment">

    <LinearLayout
        android:id="@+id/linearContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/timePeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_period"
            android:textSize="19sp"/>
        <TextView
            android:id="@+id/changePeriod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_label"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:gravity="end"
            android:textSize="19sp"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>

    <EditText
        android:id="@+id/pickStore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/linearContainer"
        android:focusableInTouchMode="false"
        android:hint="@string/select_store" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/useMonthAndYearSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/use_month_and_year_selection"
        android:layout_below="@id/pickStore"
        />

    <EditText
        android:id="@+id/pickCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/pickStore"
        android:visibility="gone"
        android:focusableInTouchMode="false"
        android:hint="@string/category" />

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/useMonthAndYearSwitch"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/background_line"
        android:orientation="horizontal"
        android:padding="4dp">

        <TextView
            android:id="@+id/product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:padding="10dp"
            android:text="@string/category"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/product"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:padding="10dp"
            android:text="@string/quantity"
            android:textSize="12sp" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTopThree"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="8dp"
        android:layout_below="@id/header"
        android:paddingEnd="14dp"
        android:paddingBottom="8dp"
        tools:listitem="@layout/top3_item" />


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:indeterminateTint="@color/colorPrimary"
        android:indeterminateTintMode="src_in"
         />

</RelativeLayout>