<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.date_product.DateAndProductFragment">

    <LinearLayout
        android:id="@+id/linearContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/timePeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_period"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/changePeriod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/change_label"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="19sp"
            android:textStyle="bold" />

    </LinearLayout>


    <EditText
        android:id="@+id/pickProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearContainer"
        android:focusableInTouchMode="false"
        android:layout_margin="10dp"
        android:hint="@string/pick_product" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:padding="10dp"
        android:textColor="@color/colorPrimary"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:visibility="visible"
        tools:text="Testni podaci"/>



</RelativeLayout>