<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.invoice.BestInvoiceFragment">

    <LinearLayout
        android:id="@+id/linearContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/timePeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_period"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/changePeriod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_label"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:gravity="end"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>

    <EditText
        android:id="@+id/selectStore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearContainer"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:focusableInTouchMode="false"
        android:gravity="center_vertical"
        android:hint="@string/select_two_stores"
        android:maxLines="1"
        android:paddingEnd="30dp"
        android:singleLine="true"
        tools:ignore="RtlSymmetry" />

    <include layout="@layout/invoice_template"
        android:id="@+id/invoice"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:visibility="invisible"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/selectStore"/>

</RelativeLayout>